fix homepage css bug on smaller screens

--- a/react-server/src/brackd-up/app/app.css
+++ b/react-server/src/brackd-up/app/app.css
@@ -46,6 +46,7 @@
     background-color: var(--secondary-white);
     min-height: 100%;
     min-width: 0;
+    overflow: hidden auto;
 }
 
 /* Header */
